	other details.

	\item \code{curlGetHeaders()} retrieves the headers for
	\code{http://}, \code{https://}, \code{ftp://} and
	\code{ftps://} URLs: analysis of these headers can provide
	insights into the `existence' of a URL (it might for example be
	permanently redirected) and will be so used in \command{R CMD
	check}.

	\item \code{download.file()} has a new built-in method
	\code{"libcurl"} which will handle \code{https://} and
	\code{ftps://} URLs, follow redirections, and allows
	simultaneous downloads of multiple URLs.
      }
    }
  }

  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item The \code{\\donttest} sections of \R's help files can be
      tested by\cr
      \command{make check TEST_DONTTEST=TRUE} .

      \item It is possible to request the use of system
      \command{valgrind} headers \emph{via} \command{configure} option
      \option{--with-system-valgrind-headers}: note the possible future
      incompatibility of such headers discussed in the 'R Installation
      and Administration' manual. (Wish of \PR{16068}.)

      \item The included version of \code{liblzma} has been updated to
      \code{xz-utils} 5.0.7 (minor bug fixes from 5.0.5).

      \item \command{configure} options \option{--with-system-zlib},
       \option{--with-system-bzlib} and \option{--with-system-pcre} are
       now the default.  For the time being there is fallback to the
       versions included in the \R sources if no system versions are
       found or (unlikely) if they are too old.

       Linux users should check that the \code{-devel} or \code{-dev}
       versions of packages \pkg{zlib}, \pkg{bzip2}/\pkg{libbz2} and
       \code{pcre} (or similar names) are installed.

       \item \command{configure} requires the \command{texi2any} script
       from \pkg{texinfo} 5.1 or later, replacing the \command{makeinfo}
       program.  (\command{makeinfo} is a link to the Perl script
       \command{texi2any} in \pkg{texinfo} 5.x.)
