@@ -237,7 +237,7 @@ SEXP attribute_hidden in_do_curlDownload(SEXP call, SEXP op, SEXP args, SEXP rho
         out[i] = R_fopen(R_ExpandFileName(file), mode);
         if (!out[i])
             error(_("cannot open destfile '%s', reason '%s'"), file, strerror(errno));
-        curl_easy_setopt(hnd[i], CURLOPT_WRITEDATA, out);
+        curl_easy_setopt(hnd[i], CURLOPT_WRITEDATA, out[i]);
 
         if (!quiet)
             REprintf(_("trying URL '%s'\n"), url);
@@ -298,14 +298,231 @@ SEXP attribute_hidden in_do_curlDownload(SEXP call, SEXP op, SEXP args, SEXP rho
 
 /* -------------------------- connections part ------------------------*/
 
+/* Unfortunately the libcurl interface is not well adapted to reading
+   data in user-requested chunks.
+
+   But it does read in up to CURL_MAX_WRITE_SIZE chunks, which is 16K.
+   So we implement a buffer which holds two chunks, and when what we
+   have is not enough we move down what it left and fetch another
+   chunk above it.  For safety, the buffer is expandable but this
+   should not be exercised.
+
+   An alternative design would be for consumeData to return what is
+   available and reset current.  Then rcvData would only be called on
+   a completely empty buffer.
+ */
+
 #include <Rconnections.h>
+
+#define R_MIN(a, b) ((a) < (b) ? (a) : (b))
+
+typedef struct Curlconn
+{
+    char *buf, *current;    // base of buffer, last read address
+    size_t bufsize, filled; // buffer size, amount which has been filled
+    Rboolean available;     // to be read out
+    int sr;                 // 'still running' count
+    CURLM *mh;
+    CURL *hnd;
+} * RCurlconn;
+
+static size_t rcvData(void *ptr, size_t size, size_t nitems, void *ctx)
+{
+    RCurlconn ctxt = (RCurlconn)ctx;
+
+    /* move down any unused data: can overlap */
+    if (ctxt->filled)
+        memmove(ctxt->buf, ctxt->current, ctxt->filled);
+    ctxt->current = ctxt->buf;
+
+    size_t add = size * nitems;
+    if (add)
+    {
+        /* allocate more space if required: unlikely */
+        if (ctxt->filled + add > ctxt->bufsize)
+        {
+            size_t newbufsize = 2 * ctxt->bufsize;
+            void *newbuf = realloc(ctxt->buf, newbufsize);
+            if (!newbuf)
+                error("Failure in re-allocation in rcvData");
+            ctxt->buf = newbuf;
+            ctxt->bufsize = newbufsize;
+        }
+
+        memcpy(ctxt->buf + ctxt->filled, ptr, add);
+        ctxt->filled += add;
+        ctxt->available = TRUE;
+    }
+    return add;
+}
+
+static size_t consumeData(void *ptr, size_t max, RCurlconn ctxt)
+{
+    size_t size = R_MIN(ctxt->filled, max); // guaranteed > 0
+    memcpy(ptr, ctxt->current, size);
+    ctxt->current += size;
+    ctxt->filled -= size;
+    return size;
+}
+
+void fetchData(RCurlconn ctxt)
+{
+    int repeats = 0;
+    do
+    {
+        int numfds;
+        CURLMcode mc = curl_multi_wait(ctxt->mh, NULL, 0, 100, &numfds);
+        if (mc != CURLM_OK)
+            error("curl_multi_wait() failed, code %d", mc);
+        if (!numfds)
+        {
+            if (repeats++ > 0)
+                Rsleep(0.1);
+        }
+        else
+            repeats = 0;
+        curl_multi_perform(ctxt->mh, &ctxt->sr);
+        if (ctxt->available)
+            break;
+    } while (ctxt->sr);
+
+    for (int msg = 1; msg > 0;)
+    {
+        CURLMsg *out = curl_multi_info_read(ctxt->mh, &msg);
+        if (out)
+        {
+            CURLcode ret = out->data.result;
+            if (ret != CURLE_OK)
+                error(curl_easy_strerror(ret));
+        }
+    }
+}
+
+static size_t Curl_read(void *ptr, size_t size, size_t nitems, Rconnection con)
+{
+    RCurlconn ctxt = (RCurlconn)(con->private);
+    size_t nbytes = size * nitems;
+    char *p = (char *)ptr;
+    size_t total = consumeData(ptr, nbytes, ctxt);
+    while ((total < nbytes) && ctxt->sr)
+    {
+        fetchData(ctxt);
+        total += consumeData(p + total, (nbytes - total), ctxt);
+    }
+    return total / size;
+}
+
+static Rboolean Curl_open(Rconnection con)
+{
+    char *url = con->description;
+    RCurlconn ctxt = (RCurlconn)(con->private);
+
+    if (con->mode[0] != 'r')
+    {
+        REprintf("can only open URLs for reading");
+        return FALSE;
+    }
+
+    ctxt->hnd = curl_easy_init();
+    curl_easy_setopt(ctxt->hnd, CURLOPT_URL, url);
+    curlCommon(ctxt->hnd, 1);
+    curl_easy_setopt(ctxt->hnd, CURLOPT_NOPROGRESS, 1L);
+    curl_easy_setopt(ctxt->hnd, CURLOPT_TCP_KEEPALIVE, 1L);
+
+    curl_easy_setopt(ctxt->hnd, CURLOPT_WRITEFUNCTION, rcvData);
+    curl_easy_setopt(ctxt->hnd, CURLOPT_WRITEDATA, ctxt);
+    ctxt->mh = curl_multi_init();
+    curl_multi_add_handle(ctxt->mh, ctxt->hnd);
+
+    ctxt->current = ctxt->buf;
+    ctxt->filled = 0;
+    ctxt->available = FALSE;
+
+    // Establish the connection: not clear if we should do this now.
+    ctxt->sr = 1;
+    while (ctxt->sr && !ctxt->available)
+        fetchData(ctxt);
+
+    con->isopen = TRUE;
+    con->canwrite = (con->mode[0] == 'w' || con->mode[0] == 'a');
+    con->canread = !con->canwrite;
+    if (strlen(con->mode) >= 2 && con->mode[1] == 'b')
+        con->text = FALSE;
+    else
+        con->text = TRUE;
+    con->save = -1000;
+    set_iconv(con);
+    return TRUE;
+}
+
+static void Curl_close(Rconnection con)
+{
+    RCurlconn ctxt = (RCurlconn)(con->private);
+
+    curl_multi_remove_handle(ctxt->mh, ctxt->hnd);
+    curl_easy_cleanup(ctxt->hnd);
+    curl_multi_cleanup(ctxt->mh);
+    free(ctxt->buf);
+
+    con->isopen = FALSE;
+}
+
+static int Curl_fgetc_internal(Rconnection con)
+{
+    unsigned char c;
+    size_t n = Curl_read(&c, 1, 1, con);
+    return (n == 1) ? c : R_EOF;
+}
 
 Rconnection in_newCurlUrl(const char *description, const char *const mode)
 {
 #ifdef HAVE_CURL_CURL_H
-    error("not yet implemented");
+    Rconnection new = (Rconnection)malloc(sizeof(struct Rconn));
+    if (!new)
+        error(_("allocation of url connection failed"));
+    new->class = (char *)malloc(strlen("url-libcurl") + 1);
+    if (!new->class)
+    {
+        free(new);
+        error(_("allocation of url connection failed"));
+    }
+    strcpy(new->class, "url-libcurl");
+    new->description = (char *)malloc(strlen(description) + 1);
+    if (!new->description)
+    {
+        free(new->class);
+        free(new);
+        error(_("allocation of url connection failed"));
+    }
+    init_con(new, description, CE_NATIVE, mode);
+    new->canwrite = FALSE;
+    new->open = &Curl_open;
+    new->close = &Curl_close;
+    new->fgetc_internal = &Curl_fgetc_internal;
+    new->fgetc = &dummy_fgetc;
+    new->read = &Curl_read;
+    new->private = (void *)malloc(sizeof(struct Curlconn));
+    if (!new->private)
+    {
+        free(new->description);
+        free(new->class);
+        free(new);
+        error(_("allocation of url connection failed"));
+    }
+    RCurlconn ctxt = (RCurlconn) new->private;
+    ctxt->bufsize = 2 * CURL_MAX_WRITE_SIZE;
+    ctxt->buf = malloc(ctxt->bufsize);
+    if (!ctxt->buf)
+    {
+        free(new->description);
+        free(new->class);
+        free(new->private);
+        free(new);
+        error(_("allocation of url connection failed"));
+    }
+    return new;
 #else
     error(_("url(method = \"libcurl\") is not supported on this platform"));
-#endif
     return (Rconnection)0; /* -Wall */
+#endif
 }
